<resources>
    <string name="app_name">exagear support v7包</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_right_drawer_acitvity">RightDrawerAcitvity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ed_host_app_name">ExaGear ED302</string>
        <string name="abc_action_bar_home_description">Navigate home</string>
        <string name="abc_action_bar_up_description">Navigate up</string>
        <string name="abc_action_menu_overflow_description">More options</string>
        <string name="abc_action_mode_done">Done</string>
        <string name="abc_activity_chooser_view_see_all">See all</string>
        <string name="abc_activitychooserview_choose_application">Choose an app</string>
        <string name="abc_capital_off">OFF</string>
        <string name="abc_capital_on">ON</string>
        <string name="abc_font_family_body_1_material">sans-serif</string>
        <string name="abc_font_family_body_2_material">sans-serif-medium</string>
        <string name="abc_font_family_button_material">sans-serif-medium</string>
        <string name="abc_font_family_caption_material">sans-serif</string>
        <string name="abc_font_family_display_1_material">sans-serif</string>
        <string name="abc_font_family_display_2_material">sans-serif</string>
        <string name="abc_font_family_display_3_material">sans-serif</string>
        <string name="abc_font_family_display_4_material">sans-serif-light</string>
        <string name="abc_font_family_headline_material">sans-serif</string>
        <string name="abc_font_family_menu_material">sans-serif</string>
        <string name="abc_font_family_subhead_material">sans-serif</string>
        <string name="abc_font_family_title_material">sans-serif-medium</string>
        <string name="abc_search_hint">Search…</string>
        <string name="abc_searchview_description_clear">Clear query</string>
        <string name="abc_searchview_description_query">Search query</string>
        <string name="abc_searchview_description_search">Search</string>
        <string name="abc_searchview_description_submit">Submit query</string>
        <string name="abc_searchview_description_voice">Voice search</string>
        <string name="abc_shareactionprovider_share_with">Share with</string>
        <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
        <string name="abc_toolbar_collapse_description">Collapse</string>
        <string name="ac_error_prefix">Activation error: </string>
        <string name="ac_more_than_one_candidate_of_lice_file">there is more than one candidate of license file: </string>
        <string name="ac_no_license_file_found">no license file found neither in `%1$s`, nor in `%2$s`.</string>
        <string name="ac_no_network_connection">no network connection available. Check connection and try again.</string>
        <string name="ac_server_response_no_result_data">the server response contains no result data. Status = %1$s.</string>
        <string name="ac_server_response_not_ok">bad server response: %1$d %2$s.</string>
        <string name="agw_basic_instruction">Add agw_basic_instruction string to your project.</string>
        <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
        <string name="aro_colour_depth">Colour depth</string>
        <string name="aro_default_controls_name">Default controls</string>
        <string name="aro_description">Run configuration</string>
        <string name="aro_locale">Locale</string>
        <string name="aro_reset_to_defaults">Reset to defaults</string>
        <string name="aro_screen_resolution">Screen resolution</string>
        <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
        <string name="buy_promo_button_text">GET ACCESS NOW</string>
        <string name="buy_promo_header_text">Buy a lifetime access to ExaGear Strategies</string>
        <string name="buy_promo_no_price">Unable to get price information, check internet connection.</string>
        <string name="character_counter_pattern">%1$d / %2$d</string>
        <string name="cil_installed_to_sdcard">It seems that you have installed ExaGear to the SD card. Please try to move ExaGear to the internal memory.</string>
        <string name="civ3_shift_off">Shift OFF</string>
        <string name="civ3_shift_on">Shift ON</string>
        <string name="cl_retry">Retry</string>
        <string name="cl_retry_message">Unable to validate license. Check to see if a network connection is available.</string>
        <string name="cl_unlicensed_message">This application is not licensed. Please purchase it from Google Play Store.</string>
        <string name="common_google_play_services_enable_button">Enable</string>
        <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
        <string name="common_google_play_services_enable_title">Enable Google Play services</string>
        <string name="common_google_play_services_install_button">Install</string>
        <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
        <string name="common_google_play_services_install_title">Get Google Play services</string>
        <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
        <string name="common_google_play_services_notification_ticker">Google Play services error</string>
        <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
        <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
        <string name="common_google_play_services_update_button">Update</string>
        <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
        <string name="common_google_play_services_update_title">Update Google Play services</string>
        <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
        <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
        <string name="common_open_on_phone">Open on phone</string>
        <string name="common_signin_button_text">Sign in</string>
        <string name="common_signin_button_text_long">Sign in with Google</string>
        <string name="cont_run_guide_civ3_body">&lt;big&gt;&lt;b&gt;To run Civilization III you must do following:&lt;/b&gt;&lt;/big&gt; &lt;p&gt;&lt;b&gt;1.&lt;/b&gt; Open \"Manage Containers\" menu.&lt;/p&gt; &lt;p&gt;&lt;b&gt;2.&lt;/b&gt; Run Explorer in container by clicking \"Run Explorer\" in container\'s context menu (container name can be found under shortcut name on \"Desktop\" or \"Start Menu\").&lt;/p&gt; &lt;p&gt;&lt;b&gt;3.&lt;/b&gt; Locate game installation folder. Go to \"Contest\" folder.&lt;/p&gt; &lt;p&gt;&lt;b&gt;4.&lt;/b&gt; Find \"Civ3Conquests.exe\", right click on it (long tap) and select \"Create link\".&lt;/p&gt; &lt;p&gt;&lt;b&gt;5.&lt;/b&gt; Now you can run Civilization III from Desktop menu by clicking \"Civ3Conquests\".&lt;/p&gt;</string>
        <string name="cont_run_guide_civ3_header">Civilization III run guide</string>
        <string name="cont_run_guide_divine_divinity_body">&lt;b&gt;To run Divine Divinity you must do following:&lt;/b&gt; &lt;p&gt;&lt;b&gt;1.&lt;/b&gt; Locate Divine Divinity folder in Start Menu and run \"Settings\".&lt;/p&gt; &lt;p&gt;&lt;b&gt;2.&lt;/b&gt; Select \"Software\" under \"New rendering\".&lt;/p&gt; &lt;p&gt;&lt;b&gt;3.&lt;/b&gt; Select \"800 x 600\" under \"Preferred display\".&lt;/p&gt; &lt;p&gt;&lt;b&gt;4.&lt;/b&gt; Press \"Apply &amp; Close\" button.&lt;/p&gt; &lt;p&gt;&lt;b&gt;5.&lt;/b&gt; Now you can run Divine Divinity from \"Desktop\" menu.&lt;/p&gt;</string>
        <string name="cont_run_guide_divine_divinity_header">Divine Divinity run guide</string>
        <string name="cont_run_guide_fallout2_body">&lt;b&gt;To run Fallout 2 you must do following:&lt;/b&gt; &lt;p&gt;&lt;b&gt;1.&lt;/b&gt; Open \"Manage Containers\" menu.&lt;/p&gt; &lt;p&gt;&lt;b&gt;2.&lt;/b&gt; Run Explorer in container by clicking \"Run Explorer\" in container\'s context menu (container name can be found under shortcut name on \"Desktop\" or \"Start Menu\").&lt;/p&gt; &lt;p&gt;&lt;b&gt;3.&lt;/b&gt; Locate game installation folder.&lt;/p&gt; &lt;p&gt;&lt;b&gt;4.&lt;/b&gt; Find \"fallout2.exe\", right click on it (long tap) and select \"Create link\".&lt;/p&gt; &lt;p&gt;&lt;b&gt;5.&lt;/b&gt; Now you can run Fallout 2 from \"Desktop\" menu by clicking \"fallout2\".&lt;/p&gt;</string>
        <string name="cont_run_guide_fallout2_header">Fallout 2 run guide</string>
        <string name="cont_run_guide_fallout_body">&lt;b&gt;To run Fallout you must do following:&lt;/b&gt; &lt;p&gt;&lt;b&gt;1.&lt;/b&gt; Open \"Manage Containers\" menu.&lt;/p&gt; &lt;p&gt;&lt;b&gt;2.&lt;/b&gt; Run Explorer in container by clicking \"Run Explorer\" in container\'s context menu (container name can be found under shortcut name on \"Desktop\" or \"Start Menu\").&lt;/p&gt; &lt;p&gt;&lt;b&gt;3.&lt;/b&gt; Locate game installation folder.&lt;/p&gt; &lt;p&gt;&lt;b&gt;4.&lt;/b&gt; Find \"falloutw.exe\", right click on it (long tap) and select \"Create link\".&lt;/p&gt; &lt;p&gt;&lt;b&gt;5.&lt;/b&gt; Now you can run Fallout from \"Desktop\" menu by clicking \"falloutw\".&lt;/p&gt;</string>
        <string name="cont_run_guide_fallout_header">Fallout run guide</string>
        <string name="copy_wine_prefix_failed">Copy operation failed. Is there enough free space?</string>
        <string name="cpi_buy_lifetime_button_label">Buy a lifetime access to ExaGear Strategies</string>
        <string name="cpi_buy_lifetime_button_with_price_label">Buy a lifetime access to ExaGear Strategies (%1$s)</string>
        <string name="cpi_buy_subscription_button_label">Subscribe to a monthly access to ExaGear Strategies</string>
        <string name="cpi_header_label">Choose the option to start playing</string>
        <string name="cpi_run_trial_button_label">FREE trial access (till %1$s)</string>
        <string name="ed_main_menu_desktop">Desktop</string>
        <string name="ed_main_menu_help">Help</string>
        <string name="ed_main_menu_install_new">Install New</string>
        <string name="ed_main_menu_select_container">Manage Containers</string>
        <string name="ed_main_menu_start_menu">Start Menu</string>
        <string name="rate_later">Later</string>
        <string name="rate_me">Please, rate this application on Google Play</string>
        <string name="rate_now">Rate</string>
</resources>