<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/title_bar_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:text="@string/aro_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/aro_screen_resolution" />

                    <TextView
                        android:id="@+id/aro_screen_resolution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:id="@+id/aro_change_screen_resolution"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:onClick="onChangeScreenResolutionClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/expand" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/aro_colour_depth" />

                    <TextView
                        android:id="@+id/aro_colour_depth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:id="@+id/aro_change_colour_depth"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:onClick="onChangeColourDepthClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/expand" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/aro_locale" />

                    <TextView
                        android:id="@+id/aro_locale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:id="@+id/aro_change_locale"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:onClick="onChangeLocaleClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/expand" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/aro_default_controls_name" />

                    <TextView
                        android:id="@+id/aro_default_controls_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:id="@+id/aro_change_default_controls_name"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:onClick="onChangeDefaultControlsNameClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/expand" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp" />
                </TableRow>
            </TableLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="onResetToDefaultsClicked"
                android:text="@string/aro_reset_to_defaults" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="onOKClicked"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
